--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body{
   font-family: ;
   padding: 0;
   margin: 0;
+  
 }
 .searc{
   width:100%;
@@ -25,33 +26,87 @@ input{
   border: 1px solid #d1cccc;
   margin: 15px;
 }
-img{
-  width: 5%;
-}
-#listCards {
-  width: 98%;
-  display: block;
-  list-style-type: none;
-  margin: 0;
-  padding: 18px;
-  position: absolute;
-  top: 55px;
-  
-  
-}
-li {
-  display: flex;
-  align-items: center;
-  border: 1px solid #ddd;
-  background:#e6e3e3;
-  font-size: 18px;
-  color: black;
-  padding: 20px; 
-}
-li:hover{
-  background: #a3a0a0;
-}
-span{
-  margin-left: 25px;
+
+
+
+
+.menu{
+  width: 40px;
+
 }
 
+.chec{
+  display: none;
+}
+
+.filtro01 {
+  background-color: rgba(16, 16, 16, 0.5);
+  width: 300px;
+  height: 100%;
+  left: -300px;
+  position: absolute;
+  transition: all .5s;
+}
+
+.chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
+  transform: translateX(300px);
+}
+.arcanos {
+  display: block;
+  padding: 10px 0;
+  margin: 0;
+  text-decoration: none;
+  color: white;
+  margin-left: 0;
+  text-align: left;
+}
+
+.arcanos:hover{
+  background-color: bisque;
+  color: black;
+}
+
+.imgmenu {
+  padding: 15px;
+  position: absolute;
+  z-index: 1;
+ 
+}
+
+
+.lista {
+  margin-top: 70px;
+  padding: 20px 5px;
+  width: 100%;
+}
+
+.content {
+  float: right;
+  width: calc(100% - 350px);
+  padding: 20px;
+}
+
+.content .imgbruxa {
+  margin-right: 20px;
+  float: right;
+  width: 150px; 
+  border-radius: 20px;
+}
+
+
+.content .imgbruxa1 {
+  float: left;
+  width: 150px;
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.content h1 {
+  margin-top: 0;
+  margin-left: 190px;
+  font-size: 50px; /* Tamanho da fonte aumentado para 24 pixels */
+}
+
+.content p {
+  font-size: 25px; /* Tamanho da fonte aumentado para 18 pixels */
+}
