--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,17 @@ html {
   height: 100%;
   width: 100%;
 }
-body{
-  font-family: ;
+
+body {
+  font-family: sans-serif;
   padding: 0;
   margin: 0;
-  
+  background-image: url("tarotimag/fumaça.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
+
 .searc{
   width:100%;
   background-color: black;
@@ -104,9 +109,15 @@ input{
 .content h1 {
   margin-top: 0;
   margin-left: 190px;
-  font-size: 50px; /* Tamanho da fonte aumentado para 24 pixels */
+  font-size: 50px; 
+  color: bisque;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+
 }
 
 .content p {
-  font-size: 25px; /* Tamanho da fonte aumentado para 18 pixels */
+  font-size: 20px; 
+  color: bisque;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+
 }
