--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ html {
   width: 100%;
 }
 body{
-  font-family: ;
+  /*font-family: ;*/
   padding: 0;
   margin: 0;
 }
@@ -39,7 +39,7 @@ img{
   
   
 }
-li {
+.listCards {
   display: none;
   align-items: center;
   border: 1px solid #ddd;
