--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,12 @@ body {
   font-family: sans-serif;
   padding: 0;
   margin: 0;
-  background-image: url("tarotimag/fumaça.gif");
+  background-image: url("tarotimag/estrela.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  height: 100vh; /* Define a altura do body como 100% da altura da janela do navegador */
+  background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
 }
 
 .searc{
@@ -23,7 +25,7 @@ body {
   position: relative;
 }
 input{
-  width: 97%;
+  width: 14%;
   height: 50px;
   padding-left: 20px;
   font-size: 20px;
@@ -31,13 +33,47 @@ input{
   border: 1px solid #d1cccc;
   margin: 15px;
 }
+img{
+  width: 5%;
+}
+#listCards {
+  width: 98%;
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 18px;
+  position: absolute;
+  top: 55px;
+  
+  
+}
+.listCards {
+  display: none;
+  align-items: center;
+  border: 1px solid #ddd;
+  background:#e6e3e3;
+  font-size: 18px;
+  color: black;
+  padding: 20px; 
+}
+li:hover{
+  background: #a3a0a0;
+}
+span{
+  margin-left: 25px;
+}
 
-
-
+p {
+  text-align: justify;
+  margin: 35px;
+}
+h1 {
+  margin: 30px;
+}
 
 .menu{
-  width: 40px;
-
+  width: 70px;
+  border-radius: 30px;
 }
 
 .chec{
@@ -45,18 +81,20 @@ input{
 }
 
 .filtro01 {
-  background-color: rgba(16, 16, 16, 0.5);
-  width: 300px;
+  background-color: rgba(119, 111, 111, 0.5);
+  width: 250px;
   height: 100%;
-  left: -300px;
+  left: -250px;
   position: absolute;
   transition: all .5s;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
-  transform: translateX(300px);
+  transform: translateX(250px);
 }
-.arcanos {
+.lista .bigger,
+.lista .minors,
+.lista .home-page {
   display: block;
   padding: 10px 0;
   margin: 0;
@@ -66,18 +104,19 @@ input{
   text-align: left;
 }
 
-.arcanos:hover{
+.lista .bigger:hover,
+.lista .minors:hover,
+.lista .home-page:hover {
   background-color: bisque;
   color: black;
 }
+
 
 .imgmenu {
   padding: 15px;
   position: absolute;
   z-index: 1;
- 
 }
-
 
 .lista {
   margin-top: 70px;
@@ -98,7 +137,6 @@ input{
   border-radius: 20px;
 }
 
-
 .content .imgbruxa1 {
   float: left;
   width: 150px;
@@ -112,12 +150,78 @@ input{
   font-size: 50px; 
   color: bisque;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
-
 }
 
 .content p {
   font-size: 20px; 
   color: bisque;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
-
+  text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
 }
+
+
+
+.inputBox {
+  margin-bottom: 20px; /* Adiciona um espaçamento de 20 pixels abaixo do elemento */
+}
+
+.inputBox select {
+  /* Define o estilo dos inputs e selects */
+  width: 80%;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+  .text{
+    font-size: 14px; 
+    color: #d1cccc;
+  }
+  .container {
+    display: flex;
+  }
+  
+ 
+  
+  #cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Alinhar os cards à esquerda */
+    margin-top: 20px;
+    margin-left: 300px;
+  }
+  
+  .card {
+    width: 45%; /* Ajustar a largura dos cards */
+    height: 300px;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: #ddd;
+  }
+  
+  .card-item {
+    flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
+  }
+  
+  @media (max-width: 600px) {
+    .card {
+      width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
+    }
+  }
+  .card {
+    width: 400px;
+    height: 300px;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: #ddd;
+    overflow: hidden; /* Para evitar que o conteúdo saia para fora do card */
+  }
+  
+  .card h2 {
+    margin: 0; /* Remover margens padrão do h2 */
+  }
+  
+  .card p {
+    margin: 10px 0; /* Adicionar margem superior e inferior ao parágrafo */
+  }
+  
