--- a/src/style.css
+++ b/src/style.css
@@ -195,8 +195,11 @@ h1 {
     border: 1px solid gray;
     padding: 10px;
     margin: 20px;
-    background-color: #ddd;
+    background-color:black;
+    
   }
+
+  
   
   .card-item {
     flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
@@ -207,21 +210,50 @@ h1 {
       width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
     }
   }
-  .card {
-    width: 400px;
-    height: 300px;
-    border: 1px solid gray;
+  .card-image {
+    width: 100%; /* Define a largura da imagem como 100% */
+    height: 100%; /* Define a altura da imagem como 100% */
+    object-fit: cover; /* Redimensiona a imagem para preencher o espaço sem distorção */
+  
+  }
+  .clickable-card {
+    transition: transform 0.5s ease; /* Adiciona uma transição suave para a transformação */
+  }
+  
+  /* Estilo para os cards quando virados */
+  .clickable-card.flipped {
+    transform: rotateY(180deg);
+  }
+  
+  
+  .card-back {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     padding: 10px;
-    margin: 20px;
-    background-color: #ddd;
-    overflow: hidden; /* Para evitar que o conteúdo saia para fora do card */
+    box-sizing: border-box;
+    transform: scaleX(-1);
+  
+    /* Adicione um limite de altura para ajustar o texto dentro do card */
+    max-height: 100%;
+  }
+
+  
+  .text-container {
+    display: none; /* Oculta o texto por padrão */
   }
   
-  .card h2 {
-    margin: 0; /* Remover margens padrão do h2 */
+  .card-back {
+    color: white; /* Define a cor do texto como branco */
+  }
+  .card-front {
+    position: relative;
   }
   
-  .card p {
-    margin: 10px 0; /* Adicionar margem superior e inferior ao parágrafo */
+
+  .hidden {
+    display: none;
   }
-  
