--- a/src/style.css
+++ b/src/style.css
@@ -199,16 +199,271 @@ h1 {
     margin-left: 300px;
   }
   
-  .card {
-    width: 45%; /* Ajustar a largura dos cards */
-    height: 300px;
-    border: 1px solid gray;
-    padding: 10px;
-    margin: 20px;
-    background-color:black;
+  
+  html {
+    height: 100%;
+    width: 100%;
+  }
+  
+  body {
+    font-family: sans-serif;
+    padding: 0;
+    margin: 0;
+    background-image: url("tarotimag/estrela.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh; /* Define a altura do body como 100% da altura da janela do navegador */
+    background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
+  }
+  
+  .searc{
+    width:100%;
+    background-color: black;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  input{
+    width: 14%;
+    height: 50px;
+    padding-left: 20px;
+    font-size: 20px;
+    border-radius: 6px;
+    border: 1px solid #d1cccc;
+    margin: 15px;
+  }
+  img{
+    width: 5%;
+  }
+  #listCards {
+    width: 98%;
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 18px;
+    position: absolute;
+    top: 55px;
+    
     
   }
-
+  .listCards {
+    display: none;
+    align-items: center;
+    border: 1px solid #ddd;
+    background:#e6e3e3;
+    font-size: 18px;
+    color: black;
+    padding: 20px; 
+  }
+  li:hover{
+    background: #a3a0a0;
+  }
+  span{
+    margin-left: 25px;
+  }
+  
+  p {
+    text-align: justify;
+    margin: 35px;
+  }
+  h1 {
+    margin: 30px;
+  }
+  
+  .menu{
+    width: 70px;
+    border-radius: 30px;
+  }
+  
+  .chec{
+    display: none;
+  }
+  
+  .filtro01 {
+    background-color: rgba(119, 111, 111, 0.5);
+    width: 250px;
+    height: 100%;
+    left: -250px;
+    position: absolute;
+    transition: all .5s;
+  }
+  
+  .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
+    transform: translateX(250px);
+  }
+  .lista .bigger,
+  .lista .minors,
+  .lista .home-page,
+  .lista .copas,
+  .lista .ouros,
+  .lista .paus,
+  .lista .espadas,
+  .lista .cardall {
+    display: block;
+    padding: 10px 0;
+    margin: 0;
+    text-decoration: none;
+    color: white;
+    margin-left: 0;
+    text-align: left;
+  }
+  
+  .lista .bigger:hover,
+  .lista .minors:hover,
+  .lista .home-page:hover,
+  .lista .copas:hover,
+  .lista .ouros:hover,
+  .lista .paus:hover,
+  .lista .espadas:hover,
+  .lista .cardall:hover {
+    background-color: bisque;
+    color: black;
+  }
+  
+  
+  .imgmenu {
+    padding: 15px;
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .lista {
+    margin-top: 70px;
+    padding: 20px 5px;
+    width: 100%;
+  }
+  
+  .content {
+    float: right;
+    width: calc(100% - 350px);
+    padding: 20px;
+  }
+  
+ 
+ 
+  
+  .content h1 {
+    margin-top: 0;
+    margin-left: 190px;
+    font-size: 50px; 
+    color: bisque;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+  }
+  
+  .content p {
+    font-size: 20px; 
+    color: bisque;
+    text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
+  }
+  
+  
+  
+  .inputBox {
+    margin-bottom: 20px; /* Adiciona um espaçamento de 20 pixels abaixo do elemento */
+  }
+  
+  .inputBox select {
+    /* Define o estilo dos inputs e selects */
+    width: 80%;
+    padding: 10px;
+    border-radius: 50px;
+  }
+  
+    .text{
+      font-size: 14px; 
+      color: #d1cccc;
+    }
+    .container {
+      display: flex;
+    }
+    
+   
+    
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 20px;
+      margin-left: 300px;
+    }
+    
+    .card {
+      width: calc(50% - 40px);
+      height: 300px;
+      border: 1px solid gray;
+      padding: 10px;
+      margin: 20px;
+      background-color: black;
+    }
+    
+    @media (max-width: 600px) {
+      .card {
+        width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
+        margin: 20px 0; /* Remove as margens laterais em dispositivos menores */
+      }
+    }
+    
+    
+    
+    .card-item {
+      flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
+    }
+    
+    @media (max-width: 600px) {
+      .card {
+        width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
+      }
+    }
+    .card-image {
+      width: 100%; /* Define a largura da imagem como 100% */
+      height: 100%; /* Define a altura da imagem como 100% */
+      object-fit: cover; /* Redimensiona a imagem para preencher o espaço sem distorção */
+    
+    }
+    .clickable-card {
+      transition: transform 0.5s ease; /* Adiciona uma transição suave para a transformação */
+    }
+    
+    /* Estilo para os cards quando virados */
+    .clickable-card.flipped {
+      transform: rotateY(180deg);
+    }
+    
+    
+    .card-back {
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 10px;
+      box-sizing: border-box;
+      transform: scaleX(-1);
+    
+      /* Adicione um limite de altura para ajustar o texto dentro do card */
+      max-height: 100%;
+    }
+  
+    
+    .text-container {
+      display: none; /* Oculta o texto por padrão */
+    }
+    
+    .card-back {
+      color: white; /* Define a cor do texto como branco */
+    }
+    .card-front {
+      position: relative;
+    }
+    
+  
+    .hidden {
+      display: none;
+    }
   
   
   .card-item {
@@ -267,3 +522,49 @@ h1 {
   .hidden {
     display: none;
   }
+
+  .display{
+    position: absolute;
+    width: 1471.91px;
+    height: 259.99px;
+    
+    background: #0E0D0D;
+    mix-blend-mode: saturation;}
+   
+   
+    .displaytext {
+      position: absolute;
+      width: 1245.06px;
+      height: 73.6px;
+      
+      font-family: 'Inika';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 52px;
+      
+      color: #FFFFFF;
+      
+      /* Centralizar o texto horizontalmente */
+      left: 25%;
+    }
+
+    .imgbruxa {
+      position: absolute;
+      margin-top: 150px;
+      margin-left: 20px;
+      width: 80px;
+      height: 100px;
+      border-radius: 25px;
+    }
+    
+    .imgbruxa1 {
+      position: absolute;
+      margin-top: 150px;
+      width: 80px;
+      height: 100px;
+      border-radius: 25px;
+      
+      /* Posicionar a imagem próximo à borda direita */
+      right: 30%;
+    }
