--- a/src/style.css
+++ b/src/style.css
@@ -85,8 +85,9 @@ h1 {
   width: 250px;
   height: 100%;
   left: -250px;
-  position: absolute;
   transition: all .5s;
+   position: relative;
+  width: 100%;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
@@ -116,12 +117,29 @@ h1 {
 .lista .ouros:hover,
 .lista .paus:hover,
 .lista .espadas:hover,
-.lista .cardall:hover {
+.lista .cardall:hover
+ {
+
   background-color: bisque;
   color: black;
 }
 
+.lista .orda,
+.lista .ordz {
+  display: block;
+  padding: 10px 0;
+  margin: 0;
+  text-decoration: none;
+  color: white;
+  margin-left: 0;
+  text-align: left;
+}
 
+.lista .orda:hover,
+.lista .ordz:hover {
+  background-color: bisque;
+  color: black;
+}
 .imgmenu {
   padding: 15px;
   position: absolute;
@@ -140,19 +158,7 @@ h1 {
   padding: 20px;
 }
 
-.content .imgbruxa {
-  margin-right: 20px;
-  float: right;
-  width: 150px; 
-  border-radius: 20px;
-}
 
-.content .imgbruxa1 {
-  float: left;
-  width: 150px;
-  border-radius: 20px;
-  margin-right: 20px;
-}
 
 .content h1 {
   margin-top: 0;
@@ -200,55 +206,11 @@ h1 {
   }
   
   
-  html {
-    height: 100%;
-    width: 100%;
-  }
+ 
   
-  body {
-    font-family: sans-serif;
-    padding: 0;
-    margin: 0;
-    background-image: url("tarotimag/estrela.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh; /* Define a altura do body como 100% da altura da janela do navegador */
-    background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
-  }
   
-  .searc{
-    width:100%;
-    background-color: black;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  input{
-    width: 14%;
-    height: 50px;
-    padding-left: 20px;
-    font-size: 20px;
-    border-radius: 6px;
-    border: 1px solid #d1cccc;
-    margin: 15px;
-  }
-  img{
-    width: 5%;
-  }
-  #listCards {
-    width: 98%;
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 18px;
-    position: absolute;
-    top: 55px;
     
-    
-  }
+  
   .listCards {
     display: none;
     align-items: center;
@@ -269,18 +231,7 @@ h1 {
     text-align: justify;
     margin: 35px;
   }
-  h1 {
-    margin: 30px;
-  }
   
-  .menu{
-    width: 70px;
-    border-radius: 30px;
-  }
-  
-  .chec{
-    display: none;
-  }
   
   .filtro01 {
     background-color: rgba(119, 111, 111, 0.5);
@@ -324,12 +275,7 @@ h1 {
   }
   
   
-  .imgmenu {
-    padding: 15px;
-    position: absolute;
-    z-index: 1;
-  }
-  
+ 
   .lista {
     margin-top: 70px;
     padding: 20px 5px;
@@ -523,48 +469,51 @@ h1 {
     display: none;
   }
 
-  .display{
+  .display {
     position: absolute;
-    width: 1471.91px;
+    width: 100%;
     height: 259.99px;
-    
     background: #0E0D0D;
-    mix-blend-mode: saturation;}
-   
-   
-    .displaytext {
-      position: absolute;
-      width: 1245.06px;
-      height: 73.6px;
-      
-      font-family: 'Inika';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 40px;
-      line-height: 52px;
-      
-      color: #FFFFFF;
-      
-      /* Centralizar o texto horizontalmente */
-      left: 25%;
-    }
-
-    .imgbruxa {
-      position: absolute;
-      margin-top: 150px;
-      margin-left: 20px;
-      width: 80px;
-      height: 100px;
-      border-radius: 25px;
-    }
+    mix-blend-mode: saturation;
     
-    .imgbruxa1 {
-      position: absolute;
-      margin-top: 150px;
-      width: 80px;
-      height: 100px;
-      border-radius: 25px;
-      
-      /* Posicionar a imagem próximo à borda direita */
-      right: 30%;
-    }
+    /* Centralizar verticalmente */
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centralizar horizontalmente */
+  }
+  
+  .displaytext {
+    position: relative;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  
+  .displaytext h2 {
+    margin-bottom: 10px; /* Ajuste a margem inferior conforme necessário */
+  }
+  
+  .displaytext h3 {
+    margin-bottom: 5px; /* Ajuste a margem inferior conforme necessário */
+  }
+  
+  .imgbruxa {
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 20px;
+    width: 80px;
+    height: 100px;
+    border-radius: 25px;
+  }
+  
+  .imgbruxa1 {
+    position: absolute;
+    margin-top:0px;
+    width: 80px;
+    height: 100px;
+    border-radius: 25px;
+    
+    /* Posicionar a imagem próximo à borda direita */
+    right: 30%;
+  }
+  
+  
