--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 100vh; /* Define a altura do body como 100% da altura da janela do navegador */
-  background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
+  height: 100vh;
+  background-attachment: fixed;
 }
 
-.searc{
-  width:100%;
+.searc {
+  width: 100%;
   background-color: black;
   display: flex;
   flex-flow: column;
@@ -24,7 +24,8 @@ body {
   align-items: center;
   position: relative;
 }
-input{
+
+input {
   width: 14%;
   height: 50px;
   padding-left: 20px;
@@ -33,40 +34,27 @@ input{
   border: 1px solid #d1cccc;
   margin: 15px;
 }
-img{
-  width: 5%;
-}
 
 .listCards {
   display: none;
   align-items: center;
   border: 1px solid #ddd;
-  background:#e6e3e3;
+  background: #e6e3e3;
   font-size: 18px;
   color: black;
-  }
+}
 
-li:hover{
+li:hover {
   background: #a3a0a0;
 }
-span{
-  margin-left: 25px;
-}
 
-p {
-  text-align: justify;
-  margin: 35px;
-}
-h1 {
-  margin: 30px;
-}
-
-.menu{
+.menu {
   width: 70px;
   border-radius: 30px;
+  position:fixed ;
 }
 
-.chec{
+.chec {
   display: none;
 }
 
@@ -75,14 +63,16 @@ h1 {
   width: 250px;
   height: 100%;
   left: -250px;
+  position: fixed;
   transition: all .5s;
-   position: relative;
-  width: 100%;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
   transform: translateX(250px);
 }
+
+
+
 .lista .bigger,
 .lista .minors,
 .lista .home-page,
@@ -90,7 +80,9 @@ h1 {
 .lista .ouros,
 .lista .paus,
 .lista .espadas,
-.lista .cardall {
+.lista .cardall,
+.lista .orda,
+.lista .ordz {
   display: block;
   padding: 10px 0;
   margin: 0;
@@ -107,33 +99,26 @@ h1 {
 .lista .ouros:hover,
 .lista .paus:hover,
 .lista .espadas:hover,
-.lista .cardall:hover
- {
-
-  background-color: bisque;
-  color: black;
-}
-
-.lista .orda,
-.lista .ordz {
-  display: block;
-  padding: 10px 0;
-  margin: 0;
-  text-decoration: none;
-  color: white;
-  margin-left: 0;
-  text-align: left;
-}
-
+.lista .cardall:hover,
 .lista .orda:hover,
 .lista .ordz:hover {
   background-color: bisque;
   color: black;
 }
+
 .imgmenu {
   padding: 15px;
+  cursor: pointer;
   position: absolute;
+  display: flex;
   z-index: 1;
+}
+
+.menutext {
+  margin-top: 20px;
+  margin-left: 0px;
+  color: white;
+  border-color: #0e0d0d;
 }
 
 .lista {
@@ -142,123 +127,41 @@ h1 {
   width: 100%;
 }
 
-.content {
-  float: right;
-  width: calc(100% - 350px);
-  padding: 20px;
-}
-
-
-
-.content h1 {
-  margin-top: 0;
-  margin-left: 190px;
-  font-size: 50px; 
-  color: bisque;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
-}
-
-.content p {
-  font-size: 20px; 
-  color: bisque;
-  text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
-}
-
-
-
 .inputBox {
-  margin-bottom: 20px; /* Adiciona um espaçamento de 20 pixels abaixo do elemento */
+  margin-bottom: 20px;
 }
 
 .inputBox select {
-  /* Define o estilo dos inputs e selects */
   width: 80%;
   padding: 10px;
   border-radius: 50px;
 }
 
-  .text{
-    font-size: 14px; 
-    color: #d1cccc;
-  }
-  .container {
-    display: flex;
-  }
-  
+.text {
+  font-size: 14px;
+  color: #d1cccc;
+}
+
+.container {
+  display: flex;
+}
+
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 300px;
+}
+
+span {
+  margin-left: 25px;
+}
+
  
   
-  .cardContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-    margin-top: 20px;
-    margin-left: 300px;
-  }
   
-  
-  .listCards {
-    display: none;
-    align-items: center;
-    border: 1px solid #ddd;
-    background:#e6e3e3;
-    font-size: 18px;
-    color: black;
-    padding: 20px; 
-  }
-  li:hover{
-    background: #a3a0a0;
-  }
-  span{
-    margin-left: 25px;
-  }
-  
-  p {
-    text-align: justify;
-    margin: 35px;
-  }
-  
-  
-  .filtro01 {
-    background-color: rgba(119, 111, 111, 0.5);
-    width: 250px;
-    height: 100%;
-    left: -250px;
-    position: absolute;
-    transition: all .5s;
-  }
-  
-  .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
-    transform: translateX(250px);
-  }
-  .lista .bigger,
-  .lista .minors,
-  .lista .home-page,
-  .lista .copas,
-  .lista .ouros,
-  .lista .paus,
-  .lista .espadas,
-  .lista .cardall {
-    display: block;
-    padding: 10px 0;
-    margin: 0;
-    text-decoration: none;
-    color: white;
-    margin-left: 0;
-    text-align: left;
-  }
-  
-  .lista .bigger:hover,
-  .lista .minors:hover,
-  .lista .home-page:hover,
-  .lista .copas:hover,
-  .lista .ouros:hover,
-  .lista .paus:hover,
-  .lista .espadas:hover,
-  .lista .cardall:hover {
-    background-color: bisque;
-    color: black;
-  }
-  
+ 
   
  
   .lista {
@@ -268,7 +171,7 @@ h1 {
   }
   
   .content {
-    float: right;
+    float:right;
     width: calc(100% - 350px);
     padding: 20px;
   }
@@ -278,18 +181,24 @@ h1 {
   
   .content h1 {
     margin-top: 0;
-    margin-left: 190px;
     font-size: 50px; 
-    color: bisque;
+    color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
   }
   
   .content p {
     font-size: 20px; 
-    color: bisque;
+    color: white;
     text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
   }
-  
+
+  .imgcartas{
+    position: relative;
+    float: right;
+    margin-right: 20px; /* Define a margem esquerda para criar espaço entre a imagem e o conteúdo */
+    filter: grayscale(60%) sepia(40%) brightness(80%) contrast(120%);
+  }
+ 
   
   
   .inputBox {
