--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
   height: 100vh;
   background-attachment: fixed;
 }
-
+/*filtro lateral e barra de pesguisa*/
 .searc {
   width: 100%;
   background-color: black;
@@ -22,36 +22,32 @@ body {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 
 input {
   width: 14%;
-  height: 50px;
+  height: 60px;
   padding-left: 20px;
-  font-size: 20px;
+  font-size: 15px;
   border-radius: 6px;
   border: 1px solid #d1cccc;
   margin: 15px;
+  position: fixed;
 }
 
-.listCards {
-  display: none;
-  align-items: center;
-  border: 1px solid #ddd;
-  background: #e6e3e3;
-  font-size: 18px;
-  color: black;
-}
 
-li:hover {
-  background: #a3a0a0;
-}
 
 .menu {
   width: 70px;
-  border-radius: 30px;
+  border-radius: 50px;
   position:fixed ;
+  z-index: 1;
+  display: flex;
+  padding: 15px;
+margin-top: 80px;
+
+
+
 }
 
 .chec {
@@ -65,6 +61,7 @@ li:hover {
   left: -250px;
   position: fixed;
   transition: all .5s;
+  margin-top: 70px;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
@@ -106,20 +103,7 @@ li:hover {
   color: black;
 }
 
-.imgmenu {
-  padding: 15px;
-  cursor: pointer;
-  position: absolute;
-  display: flex;
-  z-index: 1;
-}
 
-.menutext {
-  margin-top: 20px;
-  margin-left: 0px;
-  color: white;
-  border-color: #0e0d0d;
-}
 
 .lista {
   margin-top: 70px;
@@ -137,39 +121,10 @@ li:hover {
   border-radius: 50px;
 }
 
-.text {
-  font-size: 14px;
-  color: #d1cccc;
-}
 
-.container {
-  display: flex;
-}
 
-.cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 20px;
-  margin-left: 300px;
-}
 
-span {
-  margin-left: 25px;
-}
-
- 
-  
-  
- 
-  
- 
-  .lista {
-    margin-top: 70px;
-    padding: 20px 5px;
-    width: 100%;
-  }
-  
+/*introdução*/ 
   .content {
     float:right;
     width: calc(100% - 350px);
@@ -199,44 +154,24 @@ span {
     filter: grayscale(60%) sepia(40%) brightness(80%) contrast(120%);
   }
  
-  
-  
-  .inputBox {
-    margin-bottom: 20px; /* Adiciona um espaçamento de 20 pixels abaixo do elemento */
-  }
-  
-  .inputBox select {
-    /* Define o estilo dos inputs e selects */
-    width: 80%;
-    padding: 10px;
-    border-radius: 50px;
-  }
-  
-    .text{
-      font-size: 14px; 
-      color: #d1cccc;
-    }
-    .container {
-      display: flex;
-    }
+
     
    
-    
+    /*cards*/
     .card-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin-top: 20px;
-      margin-left: 300px;
+      margin-top: 150px;
+      margin-left: 250px;
     }
     
     .card {
       width: calc(50% - 40px);
-      height: 300px;
       cursor: pointer;
       border-radius: 25px;
       padding: 5px;
-      height:320px;
+      height:328px;
       justify-content: center;
       border: 1px solid gray;
       padding: 10px;
@@ -244,12 +179,7 @@ span {
       background-color: black;
     }
     
-    @media (max-width: 600px) {
-      .card {
-        width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
-        margin: 20px 0; /* Remove as margens laterais em dispositivos menores */
-      }
-    }
+   
     
     
     
@@ -257,11 +187,8 @@ span {
       flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
     }
     
-    @media (max-width: 600px) {
-      .card {
-        width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
-      }
-    }
+  
+    
     .card-image {
       width: 100%; /* Define a largura da imagem como 100% */
       height: 100%; /* Define a altura da imagem como 100% */
@@ -280,13 +207,6 @@ span {
     
     
     
-    
-  
-    
-    .text-container {
-      display: none; /* Oculta o texto por padrão */
-    }
-    
    
     .card-front {
       position: relative;
@@ -297,22 +217,8 @@ span {
       display: none;
     }
   
+
   
-  .card-item {
-    flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
-  }
-  
-  @media (max-width: 600px) {
-    .card {
-      width: 100%; /* Os cards ocupam 100% da largura em dispositivos menores */
-    }
-  }
-  .card-image {
-    width: 100%; /* Define a largura da imagem como 100% */
-    height: 100%; /* Define a altura da imagem como 100% */
-    object-fit: cover; /* Redimensiona a imagem para preencher o espaço sem distorção */
-  
-  }
   .clickable-card {
     transition: transform 0.5s ease; /* Adiciona uma transição suave para a transformação */
   }
@@ -343,32 +249,21 @@ span {
   .card-back p {
   color: bisque;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
-
 }
 
-
-  
-  .text-container {
-    display: none; /* Oculta o texto por padrão */
-  }
-  
   .card-front {
     position: relative;
   }
   
 
-  .hidden {
-    display: none;
-  }
-
+ 
+  /*foother*/
   .display {
     position: absolute;
     width: 100%;
     height: 259.99px;
     background: #0E0D0D;
     mix-blend-mode: saturation;
-    
-    /* Centralizar verticalmente */
     display: flex;
     align-items: center;
     justify-content: center; /* Centralizar horizontalmente */
@@ -388,24 +283,6 @@ span {
     margin-bottom: 5px; /* Ajuste a margem inferior conforme necessário */
   }
   
-  .imgbruxa {
-    position: absolute;
-    margin-top: 80px;
-    margin-left: 20px;
-    width: 80px;
-    height: 100px;
-    border-radius: 25px;
-  }
-  
-  .imgbruxa1 {
-    position: absolute;
-    margin-top:0px;
-    width: 80px;
-    height: 100px;
-    border-radius: 25px;
-    
-    /* Posicionar a imagem próximo à borda direita */
-    right: 30%;
-  }
+
   
   
