--- a/src/style.css
+++ b/src/style.css
@@ -26,10 +26,10 @@ body {
 
 input {
   width: 14%;
-  height: 60px;
+  height: 40px;
   padding-left: 20px;
   font-size: 15px;
-  border-radius: 6px;
+  border-radius: 20px;
   border: 1px solid #d1cccc;
   margin: 15px;
   position: fixed;
@@ -44,7 +44,7 @@ input {
   z-index: 1;
   display: flex;
   padding: 15px;
-margin-top: 80px;
+  margin-top: 80px;
 
 
 
@@ -162,7 +162,7 @@ margin-top: 80px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin-top: 150px;
+      margin-top: 50px;
       margin-left: 250px;
     }
     
@@ -177,6 +177,7 @@ margin-top: 80px;
       padding: 10px;
       margin: 20px;
       background-color: black;
+      
     }
     
    
@@ -247,14 +248,25 @@ margin-top: 80px;
   
   .card-back h2,
   .card-back p {
-  color: bisque;
+  color:white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
 }
 
   .card-front {
     position: relative;
   }
+  /*titulo*/
   
+  
+  .titulo{
+    color: #FFFFFF;
+    margin-top: 100px;
+   align-items: center;
+   display: flex;
+   margin-left: 600px;
+   text-decoration: none;
+   font-size: 50px;   
+  }
 
  
   /*foother*/
@@ -267,6 +279,7 @@ margin-top: 80px;
     display: flex;
     align-items: center;
     justify-content: center; /* Centralizar horizontalmente */
+    z-index: 1; 
   }
   
   .displaytext {
@@ -282,6 +295,8 @@ margin-top: 80px;
   .displaytext h3 {
     margin-bottom: 5px; /* Ajuste a margem inferior conforme necessário */
   }
+  
+
   
 
   
