--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ main {
   
   
 }
-/*incluir respons*/
+
 input {
   width: 14%;
   height: 40px;
@@ -33,15 +33,16 @@ input {
   border-radius: 20px;
   border: 1px solid #d1cccc;
   margin: 15px;
-  position: fixed;
+  position: absolute;
   right: 30px;
   top: 20px;
+  display: none;
 }
 
 .search {
   width: 100%;
   background-color: black;
-  display: flex;
+  display: none;
   flex-flow: column;
   justify-content: center;
   align-items: center;
@@ -248,18 +249,7 @@ input {
   font-size: 30px;
 }
 
-/*foother*/
-.display {
-  position: absolute;
-  width: 100%;
-  height: 259.99px;
-  background: #0e0d0d;
-  mix-blend-mode: saturation;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* Centralizar horizontalmente */
-  z-index: 1;
-}
+
 
 .porcentage {
   position: relative;
@@ -267,7 +257,6 @@ input {
   text-align: right;
   color:#FFFFFF;
 }
-
 
 
 .displaytext {
@@ -295,6 +284,8 @@ input {
 .text {
   width: 40vw;
 }
+
+
 
 @media screen and (max-width: 1350px) {
   .text {
@@ -439,12 +430,7 @@ input {
 
 }
 
-footer{
-  position:static;
-  bottom: 0;
-  width: 100vw;
-  height: 10vh;
-}
+
 
 .content{
   height: 90%;
